lm exam third day

--- a/4.-linear_models/QUIZ_linear_models_questions.ipynb
+++ b/4.-linear_models/QUIZ_linear_models_questions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "[2 rows x 24 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "GarageArea    0.882475    1.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,6 +556,19 @@
    "source": [
     "print(\"Are they highly correlated? Indeed. SO THIS MUST BE THE REASON. MULTICOLINEALIDAD ----> MAL\")\n",
     "data[[\"GarageCars\", \"GarageArea\"]].corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The number of cars that can fit in the garage is indeed strongly dependent on the area of the garage. This could be checked by computing a correlation coefficient (e.g. the Pearson, Spearman or Kendall correlation coefficients) between the two columns.\n",
+    "\n",
+    "Correlated features typically cause unstable estimation of the the matching linear model coefficients, even with some level of regularization. As a result we can expect comparatively larger standard deviations of their coefficients when the two correlated features are included in the linear model.\n",
+    "\n",
+    "There is no reason that the measurement of the garage area would be more noisy than most other features.\n",
+    "\n",
+    "One way to check the above analysis holds would be to drop the \"GarageCars\" feature instead of \"GarageArea\" and check that the coefficient is of \"GarageArea\" gets to the most important in magnitude along with a small standard deviation."
    ]
   },
   {
@@ -570,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +601,7 @@
        "       2.15443469e+02, 1.00000000e+03])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +1004,7 @@
        "[10 rows x 23 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1040,7 @@
        " 1742.4440711605994)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,11 +1057,228 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 7 (1 point possible)\n",
+    "Check the parameter alpha_ (the regularization strength) for the different ridge regressors obtained on each fold.\n",
+    "\n",
+    "In which range does alpha_ fall into for most folds?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.001,\n",
+       " 0.001,\n",
+       " 0.25118864315095796,\n",
+       " 0.001,\n",
+       " 0.001,\n",
+       " 0.001,\n",
+       " 0.001,\n",
+       " 0.001,\n",
+       " 1.0,\n",
+       " 0.001]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[est.alpha_ for est in cv_results[\"estimator\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TA ROTO EL CACHARRO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "adult_census = pd.read_csv(\"../datasets/adult-census.csv\")\n",
+    "target = adult_census[\"class\"]\n",
+    "data = adult_census.select_dtypes([\"integer\", \"floating\"])\n",
+    "data = data.drop(columns=[\"education-num\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 8 (1 point possible)\n",
+    "How many numerical features are present in the dataset contained in the variable data?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>hours-per-week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  capital-gain  capital-loss  hours-per-week\n",
+       "0   25             0             0              40\n",
+       "1   38             0             0              50\n",
+       "2   28             0             0              40"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 9 (1 point possible)\n",
+    "Compare the generalization performance using the accuracy of the two following predictive models using a 10-fold cross-validation:\n",
+    "\n",
+    "<li> a linear model composed of a StandardScaler and a LogisticRegression\n",
+    "<li> a DummyClassifier predicting the most frequent class\n",
+    "\n",
+    "    \n",
+    "    By comparing the cross-validation test scores of both models fold-to-fold, count the number of times the linear model has a better test score than the dummy classifier. Select the range which this number belongs to:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "logistic_regression = make_pipeline(\n",
+    "    StandardScaler(), LogisticRegression(penalty=\"none\")\n",
+    ")\n",
+    "# logistic_regression.fit(data, target)\n",
+    "cv_results = cross_validate(logistic_regression, data, target,\n",
+    "                            cv=10, scoring=\"accuracy\",\n",
+    "                            return_train_score=True,\n",
+    "                            return_estimator=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.79856704, 0.79283521, 0.79668305, 0.80487305, 0.80036855,\n",
+       "       0.79914005, 0.7972973 , 0.79954955, 0.80528256, 0.80405405])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_results[\"test_score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.76069601, 0.76069601, 0.76085176, 0.76085176, 0.76085176,\n",
+       "       0.76064701, 0.76064701, 0.76064701, 0.76064701, 0.76064701])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "\n",
+    "\n",
+    "cv_results = cross_validate(DummyClassifier(strategy=\"most_frequent\"), data, target,\n",
+    "                            cv=10, scoring=\"accuracy\",\n",
+    "                            return_train_score=True,\n",
+    "                            return_estimator=True)\n",
+    "\n",
+    "cv_results[\"test_score\"]"
+   ]
   }
  ],
  "metadata": {
